TAC-542 - styling fix - put a background colour behind the table as a means of creating a clear overlap between elements

--- a/public/channelgrabber/settings/scss/_invoiceDesigner.scss
+++ b/public/channelgrabber/settings/scss/_invoiceDesigner.scss
@@ -214,7 +214,8 @@ $indicator-border-color: #1477aa;
 
 .template-element-ordertable{
     border: dashed 2px $color-mgrey;
-    table{
+    background: $color-white;
+    table {
         border: none;
         margin: 0;
         tr, td {
